app/networkPolicy/policy_engress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cldinf-network-policy
  namespace: cldinf-app
spec:
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 1
          endPort: 50000
