app/networkPolicy/policy_ingress.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cldinf-network-policy
  namespace: cldinf-app
spec:
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.18.0.0/16
            cidr: 192.168.0.0/16
      ports:
         - protocol: TCP
           port: 8000
           endPort: 8100
